--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,14 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.3'
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.4"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    implementation 'androidx.activity:activity-ktx:1.6.1'
 
     // Networking
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
